ejs install and create views folder and list.ejs file

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,10 +9,9 @@
 
 <body>
 
-    <h1> It's a weekday!</h1>
-    <p> Why are you not working!</p>
+    <h1> It's a <%=kindOfDay %> !</h1>
 
-    
+
 </body>
 
 </html>
