--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,22 @@
 
 <body>
 
-    <h1> It's a <%=kindOfDay %> !</h1>
+    <h1> <%= kindOfDay %> </h1>
+
+    <ul>
+
+        <li>Buy grocery</li>
+        <li>Cook food</li>
+        <li>Enjoy Food</li>
+
+
+    </ul>
+
+    <form class="" action="/" method="post">
+        <input type="text" name="newItem">
+
+        <button type="submit" name="button">Add</button>
+    </form>
 
 
 </body>
