passing data from webpage to server

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -17,6 +17,10 @@
         <li>Cook food</li>
         <li>Enjoy Food</li>
 
+        <% for (let i=0; i< newListItems.length; i++){ %>
+        <li> <%= newListItems[i] %> </li>
+        <% } %>
+
 
     </ul>
 
