--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,44 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("header")-%>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+<div class="box" id="heading">
 
-<body>
+    <h1> <%= listTitle %> </h1>
 
-    <div class="box" id="heading">
+</div>
 
-        <h1> <%= kindOfDay %> </h1>
+<div class="box">
 
-    </div>
+    <% for (let i=0; i< newListItems.length; i++){ %>
 
-    <div class="box">
+    <div class="item">
 
-        <% for (let i=0; i< newListItems.length; i++){ %>
+        <input type="checkbox">
 
-        <div class="item">
-
-            <input type="checkbox">
-
-            <p> <%= newListItems[i] %> </p>
-
-        </div>
-
-        <% } %>
-
-        <form class="item" action="/" method="post">
-            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-
-            <button type="submit" name="button">+</button>
-        </form>
-
+        <p> <%= newListItems[i] %> </p>
 
     </div>
 
-</body>
+    <% } %>
 
-</html>
+    <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+
+        <button type="submit" name="list" value=<%= listTitle %>>+</button>
+    </form>
+
+
+</div>
+
+<%- include("footer"); -%>
