delete checked item from the list

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,13 +10,16 @@
 
     <% newListItems.forEach(function(item){ %>
 
-    <div class="item">
+    <form class="item" action="/delete" method="post">
 
-        <input type="checkbox">
+        <div class="item">
 
-        <p> <%= item.name %> </p>
+            <input type="checkbox" name="checkbox" value="<%=item._id%>" onchange="this.form.submit()">
 
-    </div>
+            <p> <%= item.name %> </p>
+
+        </div>
+    </form>
     <% }) %>
 
 
